+ Lots of Changes
+ Fixed Reset button
+ Added Second Pirate Ship
+ Fixed Observer
- Weird Bug with Pirate Ships on first move

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,19 @@
 *.rar
 *.settings
 *.prefs
+.metadata
+bin/
+tmp/
+*.tmp
+*.bak
+*.swp
+*~.nib
+local.properties
+.settings/
+.loadpath
+.recommenders
+.project
+.classpath
+.settings/
+*.prefs
+*.prefs
